[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemy1.png" type="Texture" id=1]
[ext_resource path="res://scenes/EnemyBullets.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Enemy1.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21, 17.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 740.068

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 25.5, 21.25 )

[node name="Enemy1" type="KinematicBody2D" groups=["hurtbox"]]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -16.5 )
shape = SubResource( 6 )

[node name="EnemyBullets" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -2.5, -15.75 )
shape = SubResource( 8 )

[node name="Rotator" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
